<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vijun.firstapp.LoginActivity">

    <include
        android:id="@+id/la_toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/la_et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/la_hint_enter_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/la_et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/la_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/la_hint_enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/la_ll_buttons"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="429dp" />

    <LinearLayout
        android:id="@+id/la_ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/la_tv_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/la_btn_signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/la_txt_sign_in"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="482dp" />

        <Button
            android:id="@+id/la_btn_SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/la_txt_sign_up"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="262dp"
            tools:layout_editor_absoluteY="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/la_tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/la_txt_forgot_login_password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
